@@ -37,5 +37,5 @@
 
 #include "gridsite.h"
 
-void (*GRSTerrorLogFunc)(char *, int, int, char *, ...) = NULL;
+int (*GRSTerrorLogFunc)(char *, int, int, char *, ...) = NULL;
 
