@@ -1,3 +1,9 @@
+* Fri Jul 24 2009 Andrew McNab <Andrew.McNab@cern.ch>
+- Back port fixes from 1.7.x, including:
+-  Remove 2 argument open(...O_CREAT...) instance in
+   grst_admin_file.c
+-  Change (GRSTerrorLogFunc) to return int, to allow 
+   if-less C macro using && instead.
 * Fri Jul  3 2009 Andrew McNab <Andrew.McNab@cern.ch>
 - ==== GridSite version 1.5.12 ====
 * Fri Jul  3 2009 Andrew McNab <Andrew.McNab@cern.ch>
